--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MyNewsApp</string>
+    <string name="sample_description">Sample Description</string>
+    <string name="search_hint">Search Latest News</string>
 </resources>
